overflow-y post fix

--- a/artsync-client/src/app/post-list/post-list.component.css
+++ b/artsync-client/src/app/post-list/post-list.component.css
@@ -56,7 +56,7 @@
     font-size: 1rem;
     text-align: left;
     max-height: 10vh;
-    overflow: scroll;
+    overflow-y: scroll;
     max-width: 100%;
     word-break: break-word;
 }
